--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "darryldecode/cart": "^4.2",
+        "diglactic/laravel-breadcrumbs": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "hekmatinasser/verta": "^8.3",
         "intervention/image": "^2.7",
@@ -13,8 +15,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "morilog/jalali": "3.*",
-      "ext-mysql_xdevapi": "*",
-        "ext-http": "*"
+        "realrashid/sweet-alert": "^7.1",
+        "ultrono/laravelshoppingcart-1": "^4.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
